Add MarketModel & remove MultiMarket